Hover colour changed

--- a/start_page.html
+++ b/start_page.html
@@ -36,6 +36,13 @@
       }
       li{
         color: var(--c-magenta);
+        
+      }
+      a{
+        color: var(--c-magenta);
+      }
+      a:hover{
+        color: var(--c-orange);
       }
 
     </style>
