Header formatting: Colour & alignment

--- a/start_page.html
+++ b/start_page.html
@@ -30,7 +30,8 @@
         background-color: var(--c-background-highlights);
         color: var(--base-font-color);
         text-align: center;
-        
+        font-size: 150%;
+        color: var(--c-yellow)
       }
       footer{
         background-color: var(--c-background-highlights);
