--- a/start_page.html
+++ b/start_page.html
@@ -42,6 +42,8 @@
       }
       li{
         color: var(--c-magenta);
+        flex: auto;
+        flex-direction: row;
       }
       a{
         color: var(--c-magenta);
@@ -49,10 +51,28 @@
       a:hover{
         color: var(--c-orange);
       }
-      div{
+      #border{
         border:3px;
         border-style: solid;
         border-color: var(--c-cyan);
+      }
+      .table{
+        display: flex;
+       
+      }
+      ul#nav-menu{
+        list-style: none;
+        text-align: center;
+      }
+      ul#nav-menu li{
+        display: inline;
+        padding: 7%;
+      }
+      aside{
+        color: var(--c-green);
+      }
+      aside li{
+        color: var(--c-green);
       }
     </style>
 
@@ -66,14 +86,16 @@
       <h1>Header</h1>
       
     </header>
-
+  
     <nav>
-      <ul>
+      <div class="table"></div>
+      <ul id="nav-menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">Our team</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+    </div>
 
        <!-- A Search form is another common non-linear way to navigate through a website. -->
 
@@ -82,7 +104,7 @@
          <input type="submit" value="Go!">
        </form>
      </nav>
-
+   
     <!-- Here is our page's main content -->
     <main>
 
@@ -91,14 +113,14 @@
         <h2>Article heading</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
-<div>
+<div id="border">
         <h3>Subsection</h3>
 
         <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
 
         <p>Pelientesque auctor nisi id magna consequat sagittis. Curabitur dapibus, enim sit amet elit pharetra tincidunt feugiat nist imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros.</p>
 </div>
-<div>
+<div id="border">
         <h3>Another subsection</h3>
 
         <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
@@ -108,6 +130,7 @@
       </article>
 
       <!-- the aside content can also be nested within the main content -->
+
       <aside>
         <h2>Related</h2>
 
