--- a/start_page.html
+++ b/start_page.html
@@ -25,6 +25,7 @@
         --c-green: rgb(133,153,0);
 
         background-color: var(--c-background-color);
+        max-width: 800px;
       }
       header{
         background-color: var(--c-background-highlights);
@@ -36,6 +37,8 @@
       footer{
         background-color: var(--c-background-highlights);
         color: var(--base-font-color);
+        clear: both;
+        padding-top: 5px;
       }
       main{
         color: var(--base-font-color);
@@ -70,9 +73,24 @@
       }
       aside{
         color: var(--c-green);
+        float: right;
+        width: 12%;
       }
       aside li{
         color: var(--c-green);
+      }
+      aside a{
+        color: var(--c-red);
+      }
+      aside a:hover{
+        color: var(--c-blue);
+      }
+      h1,h2,h3{
+        padding-top: 50px;
+      }
+      article{
+        float: left;
+        width: 88%;
       }
     </style>
 
